k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetherscript-marketing
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tetherscript-marketing
  ports:
    - name: http
      port: 80
      targetPort: http
